--- a/index.html
+++ b/index.html
@@ -4,10 +4,50 @@
     <title>HTML/CSS Lab</title>
     <link rel="stylesheet" href="https://unpkg.com/basscss@8.0.1/css/basscss.min.css">
     <style>
-
+    .muted {
+      font color: #999;
+    }
+    .column{
+      flex:0 0 600px;
+    }
     </style>
   </head>
   <body>
+  <div class="mt4 flex items-center flex-column">
+    <div class="mb2 border-bottom flex flex-justify mx-auto items-center flex-wrap flex-stretch" style="width: 600px"  >
+      <div>
+
+          <img class="flex-auto left col-2 pr2" src="http://i.imgur.com/B3NJGly.jpg" alt="Scrappy-Doo">
+
+        <div class="pl2">
+          <strong>Peter Parrot </strong><span class="muted">@MRParrot - Jan 12</span>
+          <p>Wish me luck on my job interview!!!! I'm wearing my favorite tie for the occasion.</p>
+        </div>
+      </div>
+    </div>
+    <div class="mb2 border-bottom flex flex-justify mx-auto items-center flex-wrap flex-stretch" style="width: 600px"  >
+      <div>
+
+          <img class="flex-auto left col-2 pr2" src="http://i.imgur.com/B3NJGly.jpg" alt="Scrappy-Doo">
+
+        <div class="pl2">
+          <strong>Peter Parrot </strong><span class="muted">@MRParrot - Jan 12</span>
+          <p>Wish me luck on my job interview!!!! I'm wearing my favorite tie for the occasion.</p>
+        </div>
+      </div>
+    </div>
+    <div class="mb2  flex flex-justify mx-auto items-center flex-wrap flex-stretch" style="width: 600px"  >
+      <div>
+
+          <img class="flex-auto left col-2 pr2" src="http://i.imgur.com/B3NJGly.jpg" alt="Scrappy-Doo">
+
+        <div class="pl2">
+          <strong>Peter Parrot </strong><span class="muted">@MRParrot - Jan 12</span>
+          <p>Wish me luck on my job interview!!!! I'm wearing my favorite tie for the occasion.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   </body>
 </html>
